welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:3: error: reassignment to val
		if (die1=die2)  return die1+1+die2
                        ^